# kp-crewai-bot

./: .env.example  .gitignore  API_SETUP_GUIDE.md  FIXES_SUMMARY.md  FRONTEND_BACKEND_INTEGRATION_TEST.md  PHASE_1_FOUNDATION.md  PHASE_2_AGENTS.md  PHASE_5_COMPLETION_CHECKLIST.md  PHASE_5_COMPLETION_SUMMARY.md  PHASE_5_PROGRESS_UPDATE.md  PHASE_OVERVIEW.md  README.md  TEST_RESULTS_SUMMARY.md  analyze_real_data.py  check_db.py  create_test_user.py  debug_comment_generation.py  debug_dashboard.py  fix_database_storage.py  pyproject.toml  requirements-api.txt  requirements-scraping.txt  run_backend.py  run_real_test.py  start_api_server.ps1  start_server.bat  test_agent_integration.py  test_agent_simple.py  test_api.py  test_api_components.py  test_api_endpoint.py  test_api_minimal.py  test_api_server.py  test_api_simple.py  test_auth_system.py  test_backend.py  test_blog_insert.py  test_blog_researcher.py  test_bun_integration.py  test_campaign_integration.py  (+17 more)
Docs/: Automate Web Workflows Like a Boss with JavaScript.md  CURRENT-SESSION-PROGRESS.md  KloudPortal SEO Blog Commenting Automation – PRD.md
Docs/implementation/: CURRENT-SESSION-PROGRESS.md  PHASE-1-STATUS.md  PHASE-2-STATUS.md  PHASE-3-COMPLETION-SUMMARY.md  PHASE-3-PLANNING.md  (+9 more)
frontend/: .eslintrc.cjs  .gitignore  index.html  package.json  tailwind.config.js  vite.config.ts
scraping-service/: .env.example  .env.test  README.md  bun.lockb  jest.config.js  test-shutdown.js  websocket-test-client.html
src/: database_init.py  simple_db_init.py  simple_test.py  test_scrape_and_store.py
tests/: test_phase1.py
(+114 files in other folders)
