[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seo-automation"
version = "0.1.0"
description = "KloudPortal SEO Blog Commenting Automation with CrewAI"
authors = [{name = "KloudPortal Team", email = "team@kloudportal.com"}]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.70.1",
    "langchain-google-vertexai>=1.0.0",
    "google-cloud-aiplatform>=1.70.0",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
    "rich>=13.9.2",
    "typer>=0.13.1",
    "playwright>=1.48.0",
    "beautifulsoup4>=4.12.3",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.36",
    "pandas>=2.2.3",
    "openpyxl>=3.1.5"
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "black==24.10.0",
    "ruff==0.7.4",
    "mypy==1.13.0"
]

[tool.ruff]
target-version = "py310"
line-length = 88
select = ["E", "W", "F", "I", "B", "C4", "ARG", "SIM"]
ignore = ["E501", "W503", "E203"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest==8.3.3",
]
